Change in about and replace Books&teaching with Course.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <h1>Rohit Patil</h1>
         <p><em>Founder and CTO pf <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p>
         <p><em>Shivaji University</em></p>
-        <p>I am a professor at Cornell University. My research focuses on the interaction of algorithms and networks, and the roles they play in large-scale social and information systems.</p>
+        <p>I am a Web Developer.I 💜️ to play online gaming and brew my own coffee😛️.</p>
       </td>
     </tr>
   </table>
 
   <hr>
-  <h3>Books and Teaching
+  <h3>Course
   </h3>
   <ul>
-    <li>The complete iOS App development Bootcamp</li>
-    <li>The complete web development bootcamp</li>
+    <li>I have completed Javscript course in SourceKode technology,Pune</li>
+    <li>I have completed Web development bootcamp online course on Udemy</li>
   </ul>
   <hr>
 
